[package]
name = "guess-the-number"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.3"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
hostname = "0.4"